--- a/moveit_hw/CMakeLists.txt
+++ b/moveit_hw/CMakeLists.txt
@@ -26,6 +26,12 @@ ament_target_dependencies(
 install(TARGETS moveit_hw
   DESTINATION lib/${PROJECT_NAME})
 
+install(DIRECTORY
+  config
+  launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
@@ -37,7 +43,5 @@ if(BUILD_TESTING)
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
-
-install(DIRECTORY launch DESTINATION share/moveit_hw)
 
 ament_package()
